--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   mysql:
     image: 'mysql:5.6.27'
+    container_name: 'fidibo-mysql'
     ports:
       - "3306:3306"
     restart: always
@@ -19,6 +20,7 @@ services:
 
   redis:
     image: 'redis:latest'
+    container_name: 'fidibo-redis'
     ports:
       - "6379:6379"
     restart: always
@@ -27,22 +29,6 @@ services:
       replicas: 1
     volumes:
       - redis_data:/data
-
-  fidibo:
-    build:
-      context: .
-      dockerfile: ./dockerfile
-    restart: always
-    ports:
-      - "8888:8888"
-    deploy:
-      mode: replicated
-      replicas: 1
-    depends_on:
-      - mysql
-      - redis
-    environment:
-      InternalNetwork: "true"
 
 volumes:
   mysql_data:
